tests/error/misc_errors/state_result_duplicates.err
Error: Copy violation (at $FILE:12:28)
   | 
10 | def main() -> None:
11 |     q1 = qubit()
12 |     state_result("tag", q1, q1)
   |                             ^^ Variable `q1` with non-copyable type `qubit` cannot be
   |                                borrowed ...
   | 
12 |     state_result("tag", q1, q1)
   |                         -- since it was already borrowed here

Guppy compilation failed due to 1 previous error
